...
                } else {
                    showPaymentError(status.exception.localizedMessage)
                }
            }

            is AirwallexPaymentStatus.Cancel -> {
                AirwallexLogger.info("Payment cancelled")
                showPaymentCancelled()
            }
        }
    }

    private fun handlePollingResult(result: PaymentStatusPoller.PollingResult) {
...
