...
    <string name="airwallex_billing_info">Billing info</string>
    <string name="airwallex_billing_country_or_region">Billing country or region</string>
    <string name="airwallex_shipping">Shipping</string>
    <string name="airwallex_total">Total %s</string>
    <string name="airwallex_pay_now">Pay</string>
    <string name="airwallex_confirm">Confirm</string>
    <string name="airwallex_payment_methods">Payment methods</string>
    <string name="airwallex_cvc_hint" translatable="false">CVC/CVV</string>
    <string name="airwallex_card_name_hint">Name on card</string>
    <string name="airwallex_email_hint">Email</string>
    <string name="airwallex_empty_card_number">Please enter your card number</string>
    <string name="airwallex_invalid_card_number">Card number is invalid</string>
    <string name="airwallex_unsupported_card_number">Card not supported for payment</string>
...
