appId: com.airwallex.paymentacceptance
tags:
  - card
  - user
platform:
  android:
    disableAnimations: true  # Disables system animations on the Android emulator
# env:
#   WITH_PAYMENT: true # Flag to indicate if payment should be made
#   TRIGGER_BY_CUSTOMER: true # Flag to indicate if the flow is triggered by customer
---
- runScript: ../Common/settings.js
- runScript: ../Card/cards.js
- launchApp
- tapOn: "Integrate with Airwallex UI"
- runFlow:
    when:
      true: ${WITH_PAYMENT}
    file: ../Common/flow_update_checkout_mode.yaml
    env:
      CHECKOUT_MODE: ${output.settings.checkoutMode.recurringAndPayment}
- runFlow:
    when:
      true: ${WITH_PAYMENT == 'false'}
    file: ../Common/flow_update_checkout_mode.yaml
    env:
      CHECKOUT_MODE: ${output.settings.checkoutMode.recurring}
# update settings
- tapOn: setting
- runFlow:
    when:
      true: ${TRIGGER_BY_CUSTOMER}
    file: ../Common/flow_update_settings.yaml
    env:
      LAYOUT: ${output.settings.layout.tab}
      ENVIRONMENT: ${output.settings.environment.preview}
      NEXT_TRIGGERED_BY: ${output.settings.nextTriggeredBy.customer}
      IS_GUEST: false
      USE_NEW_SESSION: true
- runFlow:
    when:
      true: ${TRIGGER_BY_CUSTOMER == 'false'}
    file: ../Common/flow_update_settings.yaml
    env:
      LAYOUT: ${output.settings.layout.tab}
      ENVIRONMENT: ${output.settings.environment.preview}
      NEXT_TRIGGERED_BY: ${output.settings.nextTriggeredBy.merchant}
      IS_GUEST: false
      GENERATE_NEW_CUSTOMER_ID: true
      USE_NEW_SESSION: true

# start recurring payment flow
- tapOn: "Launch payment list"
- runFlow:
    file: ../Card/flow_pay_with_card.yaml
    env:
      CARD_NUMBER: ${output.cards.visa} # Card number for testing
      CAN_SAVE_CARD: false
      SHOULD_SAVE_CARD: false
- runFlow:
    when:
      true: ${TRIGGER_BY_CUSTOMER == 'false'}
    file: ../Common/flow_handle_3ds.yaml
    env:
      CANCEL_3DS: false
- runFlow:
    file: ../Common/flow_handle_payment_result.yaml
    env:
      PAYMENT_RESULT: SUCCESS # SUCCESS/FAILED/CANCELLED

# test duplicate consent behavior - in Session mode, both customer & merchant can use same card
- tapOn: "Launch payment list"
- runFlow:
    file: ../Card/flow_pay_with_card.yaml
    env:
      CARD_NUMBER: ${output.cards.visa}
      CAN_SAVE_CARD: false
      SHOULD_SAVE_CARD: false
- runFlow:
    when:
      true: ${TRIGGER_BY_CUSTOMER == 'false'}
    file: ../Common/flow_handle_3ds.yaml
    env:
      CANCEL_3DS: false
- runFlow:
    file: ../Common/flow_handle_payment_result.yaml
    env:
      PAYMENT_RESULT: SUCCESS

# NEW SESSION: consents are visible in recurring mode, no need to switch to one-off
- tapOn: "Launch payment list"
- assertVisible:
    id: "saved-consent"
    index: 0
- runFlow:
    file: ../Card/flow_pay_with_consent.yaml
- runFlow:
    when:
      true: ${TRIGGER_BY_CUSTOMER == 'false'}
    file: ../Common/flow_handle_3ds.yaml
    env:
      CANCEL_3DS: false
- runFlow:
    file: ../Common/flow_handle_payment_result.yaml
    env:
      PAYMENT_RESULT: SUCCESS
- tapOn: "Launch payment list"
- runFlow:
    when:
      true: ${TRIGGER_BY_CUSTOMER}
    commands:
      # For customer-triggered: delete consents
      - runFlow:
          file: ../Card/flow_remove_all_consents.yaml
      - tapOn: "Navigate up"
      - runFlow:
          file: ../Common/flow_handle_payment_result.yaml
          env:
            PAYMENT_RESULT: CANCELLED
- runFlow:
    when:
      true: ${TRIGGER_BY_CUSTOMER == 'false'}
    commands:
      # For merchant-triggered: assert cannot delete
      - runFlow:
          file: ../MerchantTriggered/flow_assert_merchant_consent.yaml
      - tapOn: "Navigate up"
      - runFlow:
          file: ../Common/flow_handle_payment_result.yaml
          env:
            PAYMENT_RESULT: CANCELLED
