appId: com.airwallex.paymentacceptance
tags:
  - card 
  - guest
platform:
  android:
    disableAnimations: true  # Disables system animations on the Android emulator
---
- launchApp
- tapOn: "Integrate with Airwallex UI"
- tapOn: "Launch payment list"
- assertVisible: "Payment methods"
- tapOn: "Navigate up"
- runFlow:
    file: ../Common/handle_payment_result.yaml
    env:
      PAYMENT_RESULT: CANCELLED # SUCCESS/FAILED/CANCELLED
